--- a/style.css
+++ b/style.css
@@ -63,3 +63,69 @@ main.main__content {
   border: none;
   border-radius: .5rem;
 }
+
+/* Modal Styles */
+#modal {
+  max-width: 450px;
+  background-color: white;
+  margin: auto;
+  padding: 20px;
+  border-radius: .5rem;
+  border: none;
+}
+
+
+#modal h2 {
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+}
+
+.modal__title {
+  font-size: 2rem;
+  color: #fff;
+  text-align: center;
+  margin-bottom: 20px;
+  background-color: #ff0084;
+  padding: 10px;
+  width: 100%;
+  border-radius: .5rem;
+}
+
+#modal::backdrop {
+  background-color: rgba(0, 0, 0, .6);
+}
+
+#modal.open {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+.info {
+  padding: 10px;
+  text-align: center;
+}
+
+.info p {
+  text-align: left;
+}
+
+.info p.center {
+  text-align: center;
+}
+
+.info__inventory {
+  text-align: center;
+}
+
+button#close__modal {
+  background-color: #ff0084;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: .5rem;
+  cursor: pointer;
+  font-size: 16px;
+}
